k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j2m-sre-test
  namespace: j2m-sre-test
spec:
  rules:
  - host: "j2m-sre-test.go.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: j2m-sre-test
            port:
              number: 8080
